# DUBIDUBAP_FAST_API

./: .env-example  .gitignore  Dockerfile  README.md  check_db_status.py  deploy.sh  docker-compose.yml  local_then_upload.py  nginx.conf  process_youtube_data.py  pyproject.toml  real_audio_processor.py  step1_collect_youtube_urls2.py  step2_download_and_analyze.py  upload_analyzed_results_20250821_232951_to_server_fixed.py
.github/workflows/: deploy-fastapi.yml
app/: __init__.py  db.py  main.py  models.py  tasks.py
app/api/v1/: admin.py  analyze.py  embeddings.py  generate.py  jobs.py  monitoring.py  music.py  process.py  recommend.py  router.py  trends.py  videos.py
app/core/: __init__.py  config.py  logging.py
app/services/: audio_processor.py  audio_utils.py  embeddings.py  emotion.py  lyrics.py  model_cache.py  music.py  music_analysis.py  pitch.py  process.py  prompt.py  recommend.py  text_embed.py  transcribe.py  trends.py  vector_store.py  youtube.py  ytdl.py
app/utils/: cache.py  callback.py  dependencies.py  errors.py  rate_limit.py
data/: app.db
data/audio/: 6f0DuwAmkb4.m4a  9Bno1mkiPAM.m4a  ayw7H1HrN6c.m4a  dQw4w9WgXcQ.m4a  dd7N_Bz-nto.m4a  fqsjzBWesUc.m4a  nzKC4Frc_MM.m4a  ocvvHTRtwXc.m4a  xxcJYvgiM2I.m4a
trendy_lyrics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
