[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trendy-lyrics"
version = "0.1.0"
description = "Trendy Lyrics FastAPI backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.21",
    "google-api-python-client>=2.141.0",
    "numpy>=1.25.0",
    "faster-whisper>=1.0.3",
    "yt-dlp>=2024.10.22",
    "librosa>=0.10.2",
    "pytrends>=4.9.2",
    "requests>=2.32.0",
    "openai>=1.40.0",
    "qdrant-client>=1.11.3",
    "celery>=5.4.0",
    "redis>=5.0.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.7",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["**/*.py"]


